--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -435,7 +435,7 @@
 
   .side-text-paragraph {
     width: 83.5%;
-    font-size: 2rem;
+    /* font-size: 2rem; */
   }
 
   .side-text h1 p {
@@ -465,7 +465,7 @@
 
 @media screen and (max-width: 510px) {
   .leadership-heading {
-    font-size: 2rem;
+    /* font-size: 2rem; */
     letter-spacing: 0.85rem;
   }
 
