Moved side text up for mobile

--- a/assets/css/employers.css
+++ b/assets/css/employers.css
@@ -702,7 +702,7 @@
 
 @media screen and (max-width: 510px) and (min-height: 800px) {
   .side-text {
-    margin-top: 10%;
+    /* margin-top: 10%; */
   }
 }
 
