--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,7 @@ body {
   -webkit-animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1)
     both 0.4s;
   animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both 0.4s;
+  z-index: 1;
 }
 
 .gradient-btn {
