--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,7 +555,7 @@ body {
 
   .section-footer .container {
     padding-top: 0px;
-    padding-bottom: 5vh;
+    padding-bottom: 1rem;
   }
 
   .section-footer-heading {
