--- a/assets/css/talent.css
+++ b/assets/css/talent.css
@@ -181,9 +181,9 @@
 }
 
 @media screen and (max-width: 510px) and (max-height: 720px) {
-  .blocks {
+  /* .blocks {
     width: 150px;
-  }
+  } */
 
   .cloud-third {
     bottom: 30rem;
@@ -200,7 +200,7 @@
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 375px) and (max-height: 712px) {
   .blocks {
     width: 165px;
   }
