--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -478,12 +478,12 @@
   }
 
   .side-text-paragraph {
-    width: 80%;
+    width: 76%;
     margin: 0px auto;
   }
 
   .side-text h1 {
-    width: 80%;
+    width: 70%;
     margin: 0px auto 2vh;
   }
 }
@@ -529,9 +529,16 @@
   }
 
   .side-text {
-    top: 60vh;
+    top: 65vh;
   }
 }
 
-@media screen and (max-width: ) {
+@media screen and (max-width: 325px) {
+  .side-text {
+    top: 60vh;
+  }
+
+  .side-text h1 {
+    width: 80%;
+  }
 }
