--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,6 +313,114 @@ body {
   z-index: 1;
 }
 
+.hidden {
+  display: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  right: 12%;
+  transform: translate(0, -50%);
+  border-radius: 15px;
+  max-width: 640px;
+  width: 100%;
+  background: #fff;
+  --modal-padding: 15px;
+  padding: var(--modal-padding);
+  z-index: 10;
+}
+
+.modal hr {
+  position: relative;
+  left: calc(var(--modal-padding) * -1);
+  width: calc(100% + var(--modal-padding) * 2);
+}
+
+.modal h2 {
+  margin-top: 0px;
+  margin-bottom: var(--modal-padding);
+}
+
+.information-form {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: auto;
+  grid-template-areas:
+    "company company company company company company"
+    "city city city state state state"
+    "fname fname fname lname lname lname"
+    "email email email title title submit";
+  overflow: auto;
+  gap: var(--modal-padding);
+  align-items: end;
+}
+
+.information-form label {
+  display: block;
+  margin-bottom: 0.5em;
+  width: 100%;
+}
+
+.information-form input,
+.information-form select {
+  width: 100%;
+  background: #aaddff55;
+  border: none;
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 0.75em 0.5em;
+  font-size: 1rem;
+}
+
+.information-form option {
+  background: #fff;
+}
+
+.company-input-wrapper {
+  grid-area: company;
+}
+
+.city-input-wrapper {
+  grid-area: city;
+}
+
+.state-input-wrapper {
+  grid-area: state;
+}
+
+.fname-input-wrapper {
+  grid-area: fname;
+}
+
+.lname-input-wrapper {
+  grid-area: lname;
+}
+.title-input-wrapper {
+  grid-area: title;
+}
+.email-input-wrapper {
+  grid-area: email;
+}
+
+.information-form .submit-btn {
+  grid-area: submit;
+  color: #09f;
+  border: 1px solid #09f;
+  border-radius: 1em;
+  background: #fff;
+  height: 2em;
+  line-height: 2em;
+  padding: 0px;
+  margin-bottom: 0.5em;
+  transition: 0.3s color, 0.3s background;
+}
+
+.information-form .submit-btn:hover {
+  background: #09f;
+  color: #fff;
+}
+
 @-webkit-keyframes fade-in-bottom {
   0% {
     -webkit-transform: translateY(50px);
@@ -585,6 +693,11 @@ body {
 
   .section-footer-heading {
     width: 33.3333%;
+  }
+
+  .modal {
+    right: 50%;
+    transform: translate(50%, -50%);
   }
 }
 
