--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,10 @@ body {
 .landing-section {
   position: relative;
   color: #fff;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  min-height: -webkit-fill-available;
+  min-height: 100vh;
+  /* height: 100vh; */
+  /* height: calc(var(--vh, 1vh) * 100); */
   overflow: hidden;
 }
 
