Attempt at locking rotation

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -131,3 +131,15 @@
     letter-spacing: 0.85rem;
   }
 }
+
+@media screen and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
