--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -102,7 +102,7 @@
     position: absolute;
     top: 47vh;
     font-size: 2rem;
-    background: #ff0000;
+    background: #0000ffaa;
   }
 
   .main-image {
@@ -134,6 +134,6 @@
 
 @media screen and (device-width: 414px) and (device-height: 896px) {
   .landing-section {
-    min-height: calc(100vh - 44px);
+    min-height: calc(100vh - 88px);
   }
 }
