Removed the version colors

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -102,7 +102,7 @@
     position: absolute;
     top: 47vh;
     font-size: 2rem;
-    background: #ff00ffaa;
+    /* background: #ff00ffaa; */
   }
 
   .main-image {
