--- a/assets/css/talent.css
+++ b/assets/css/talent.css
@@ -183,10 +183,6 @@
 }
 
 @media screen and (max-width: 510px) and (max-height: 720px) {
-  /* .blocks {
-    width: 150px;
-  } */
-
   .cloud-third {
     bottom: 30rem;
   }
@@ -196,16 +192,6 @@
   .main-view {
     margin-top: 5vh;
   }
-
-  /* .blocks {
-    width: 210px;
-  } */
-}
-
-@media screen and (max-width: 375px) and (max-height: 712px) {
-  /* .blocks {
-    width: 165px;
-  } */
 }
 
 @media screen and (max-width: 350px) {
@@ -215,6 +201,18 @@
 
   .blocks {
     bottom: -10vh;
+  }
+}
+
+@media screen and (device-width: 414px) and (device-height: 896px) {
+  .blocks {
+    bottom: -10vh;
+  }
+}
+
+@media screen and (max-width: 1024px) and (orientation: landscape) {
+  .blocks {
+    bottom: -20vh;
   }
 }
 
