Added color to navbar for versioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -862,6 +862,9 @@ body {
 }
 
 @media screen and (device-width: 1024px) and (device-height: 1366px) {
+  .navigation-mobile {
+    background: #ff00ffaa;
+  }
   .landing-section {
     min-height: calc(100vh - 110px);
   }
