Added click outside of modal closing it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,6 +335,17 @@ body {
   z-index: 2;
 }
 
+/* .modal::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  background: #000000aa;
+  z-index: -5;
+} */
+
 .modal hr {
   position: relative;
   left: calc(var(--modal-padding) * -1);
@@ -832,11 +843,23 @@ body {
   }
 
   .modal {
+    position: fixed;
     top: 10vh;
     right: 0px;
     width: 100%;
     transform: none;
   }
+
+  /* .modal::before {
+    content: "";
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    background: #000000aa;
+    /* z-index: -5; */
+  } */
 
   .modal,
   .information-form input,
