--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,7 +480,7 @@ body {
   left: 0px;
   right: 0px;
   bottom: 0px;
-  color: #ccc;
+  color: #b3b3b3;
   text-align: center;
   background-image: url("../images/shared/Website-White-Bar.svg");
   background-position: top;
