--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -249,6 +249,52 @@
   width: 20%;
 }
 
+.leadership-card {
+  position: relative;
+}
+
+.card-front {
+  transform: rotateY(0deg);
+  transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  transition: transform 1.5s;
+}
+
+.card-back {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  transform: rotateY(-180deg);
+  transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  background: #0071bc;
+  color: #fff;
+  transition: transform 1.5s;
+}
+
+.leadership-card:hover .card-back {
+  /* animation: card-flip 1s forwards; */
+  transform: rotateY(0deg);
+}
+
+.leadership-card:hover .card-front {
+  transform: rotateY(180deg);
+}
+
+.card-back p {
+  margin: 0px;
+}
+
 .leadership-wrapper img {
   width: 100%;
 }
