Changed block sizing to be so that dekstop has uniform sizing and mobile has uniform sizing also adjusted site text size to not go off the screen

--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -347,7 +347,7 @@
     justify-content: space-around;
     /* padding-top: 8vh; */
     margin: 0px;
-    /* height: 100vh; */
+    min-height: 100vh;
   }
 
   .main-image {
