Adjusted talent page some more

--- a/assets/css/talent.css
+++ b/assets/css/talent.css
@@ -109,6 +109,8 @@
 
 @media screen and (max-width: 1024px) {
   .main-view {
+    justify-content: flex-end;
+    min-height: 80vh;
     margin-top: 10vh;
   }
 
