--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,7 +492,8 @@ body {
   text-align: center;
   background-image: url("../images/shared/Website-White-Bar.svg");
   background-position: top;
-  min-height: 30vh;
+  max-height: 300px;
+  height: 30vmax;
   background-repeat: no-repeat;
   background-size: cover;
   flex-direction: column;
