Fixed section footer on company page caused by height fix on other pages

--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -395,6 +395,8 @@
     background: #fff;
     bottom: -1px;
     width: calc(100% + 2px);
+    max-height: unset;
+    height: unset;
   }
 
   .section-footer .container {
