--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -59,7 +59,7 @@
 .section-footer-middle {
   font-size: 1.25rem;
   letter-spacing: 0.3rem;
-  height: 100%;
+  /* height: 100%; */
   flex-direction: column;
   justify-content: space-around;
 }
